Fixed icon alignment in contact section

--- a/src/styles/layout/_contact-item.scss
+++ b/src/styles/layout/_contact-item.scss
@@ -7,39 +7,43 @@
     display: flex;
     flex-direction: column;
     max-width: 350px;
-  
+    width: min-content;
     &:not(:last-child) {
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
   }
 
 .contact-item-header {
     color: white;
+    margin-bottom: 7px;
 }
 
 .contact-item-content {
-    display: inline-block;
     justify-content: end;
     color: $unchosen-white;
+    display: flex;
+    text-wrap: nowrap;
+    flex-wrap: nowrap;
+    transition: 0.15s ease-in;
     a {
         color: $unchosen-white;
+        transition: 0.15s ease-in;
     }
 
     .icon {
         color: $unchosen-white;
         margin: 0px 10px;
         font-size: 17px;
+        transition: 0.15s ease-in;
     }
 
     #contact-icon-external {
-        margin: 0px 10px 1px 10px;
         font-size: 15px
     }
 }
 
 .contact-item-content:hover {
     color: white;
-
     a {
         color: white;
     }
