--- a/src/styles/layout/_content-item.scss
+++ b/src/styles/layout/_content-item.scss
@@ -8,7 +8,7 @@
 
 .content-item-header{
     text-align: left;
-    font-weight: 500;
+    font-weight: 400;
     padding-bottom: 15px;
 }
 
